--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
+    "swr": "^0.5.6",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
